--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "f5-cloud-libs-google",
+  "name": "@f5devcentral/f5-cloud-libs-google",
   "version": "1.0.0",
-  "description": "Google Cloud implementation of f5-cloud-libs autoscale code",
+  "description": "Google Cloud implementation of f5-cloud-libs cloud provider code",
+  "keywords": [
+    "f5",
+    "big-ip",
+    "bigip"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/F5Networks/f5-cloud-libs-gce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/F5Networks/f5-cloud-libs-gce/issues"
   },
   "license": "Apache-2.0",
   "dependencies": {
     "@google-cloud/compute": "^0.8.0",
     "q": "^1.5.0"
   },
+  "peerDependencies": {
+    "@f5devcentral/f5-cloud-libs": "^3.6.2"
+  },
   "devDependencies": {
-    "f5-cloud-libs": "git+https://github.com/F5Networks/f5-cloud-libs.git#develop",
-    "jshint": "latest",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "nodeunit": "^0.11.1"
   },
   "scripts": {
+    "lint": "node node_modules/eslint/bin/eslint lib",
+    "package": "bash ./package.sh",
     "test": "node node_modules/nodeunit/bin/nodeunit --reporter eclipse test test/lib",
-    "package": "bash ./package.sh"
+    "version": "./setVersion.sh $npm_package_version && git add ."
   }
 }
