add gitattributes file, initial checkin for failover script

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/compute": "^0.10.0",
     "@google-cloud/storage": "^1.7.0",
+    "commander": "^2.9.0",
     "q": "^1.5.1"
   },
   "peerDependencies": {
