--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "nodeunit": "^0.11.2"
   },
   "scripts": {
-    "lint": "node node_modules/eslint/bin/eslint lib src",
+    "lint": "node node_modules/eslint/bin/eslint lib src scripts",
     "package": "bash ./package.sh",
     "test": "node node_modules/nodeunit/bin/nodeunit --reporter eclipse test test/lib",
     "version": "./setVersion.sh $npm_package_version && git add ."
