--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/compute": "^0.10.0",
     "@google-cloud/storage": "^1.7.0",
     "commander": "^2.9.0",
+    "ipaddr.js": "^1.7.0",
     "q": "^1.5.1"
   },
   "peerDependencies": {
