--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,16 +7,18 @@ stages:
     - notify
 
 test_node4:
-    image: node:4.2.3
+    image: node:4
     tags:
         - docker-executor
     stage: test
     except:
         - triggers
     script:
-        - npm install -g npm@latest-4
+        - npm install --global npm@5.10.0
         - npm install --registry ${NPM_REGISTRY} @f5devcentral/f5-cloud-libs@beta
         - npm install --registry ${NPM_REGISTRY}
+        - npm install mocha@5.2.0
+        - npm install nyc@11.1.0
         - npm run lint
         - npm test
 
@@ -30,6 +32,8 @@ test_node6:
     script:
         - npm install --registry ${NPM_REGISTRY} @f5devcentral/f5-cloud-libs@beta
         - npm install --registry ${NPM_REGISTRY}
+        - npm install mocha@5.2.0
+        - npm install nyc@14.0.0
         - npm run lint
         - npm test
 
