--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@f5devcentral/f5-cloud-libs": "^4.22.0-beta.1",
     "@google-cloud/compute": "^0.10.0",
     "@google-cloud/storage": "^1.7.0",
     "commander": "^2.9.0",
@@ -31,12 +32,13 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "nodeunit": "^0.11.3"
+    "eslint-plugin-mocha": "^8.0.0",
+    "mocha": "^7.1.1"
   },
   "scripts": {
     "lint": "node node_modules/eslint/bin/eslint lib src scripts",
     "package": "bash ./package.sh",
-    "test": "node node_modules/nodeunit/bin/nodeunit --reporter eclipse test test/lib",
+    "test": "mocha --exit test/lib",
     "version": "./setVersion.sh $npm_package_version && git add ."
   }
 }
