--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@f5devcentral/f5-cloud-libs": "^4.22.0-beta.1",
-    "@google-cloud/compute": "^0.10.0",
-    "@google-cloud/storage": "^1.7.0",
+    "@google-cloud/compute": "^2.2.0",
+    "@google-cloud/storage": "^5.3.0",
     "commander": "^2.9.0",
-    "gtoken": "2.3.0",
+    "gtoken": "^5.0.4",
     "ipaddr.js": "^1.7.0",
     "q": "^1.5.1"
   },
