--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@f5devcentral/f5-cloud-libs-gce",
-  "version": "2.9.0",
+  "version": "2.9.1",
   "description": "Google Cloud implementation of f5-cloud-libs cloud provider code",
   "keywords": [
     "f5",
@@ -19,6 +19,10 @@
     "whitelist": []
   },
   "license": "Apache-2.0",
+  "resolutions": {
+    "lodash": "4.17.21",
+    "node-forge": "0.10.0"
+  },
   "dependencies": {
     "@google-cloud/compute": "^0.10.0",
     "@google-cloud/storage": "^1.7.0",
@@ -33,7 +37,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha": "^8.0.0",
     "mocha": "^7.1.1"
   },
@@ -41,6 +45,7 @@
     "audit": "npm audit --json > .auditReport.json; node scripts/auditProcessor.js",
     "lint": "node node_modules/eslint/bin/eslint lib src scripts",
     "package": "bash ./package.sh",
+    "preinstall": "npx npm-force-resolutions",
     "test": "mocha --exit test/lib",
     "version": "./setVersion.sh $npm_package_version && git add ."
   }
