--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ test_audit:
         - triggers
 
 package:
+    image: $DOCKER_URL/node:8
     tags:
         - docker-executor
     stage: package
