--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@f5devcentral/f5-cloud-libs-gce",
-  "version": "2.9.1",
+  "version": "2.9.2",
   "description": "Google Cloud implementation of f5-cloud-libs cloud provider code",
   "keywords": [
     "f5",
@@ -45,7 +45,7 @@
     "audit": "npm audit --json > .auditReport.json; node scripts/auditProcessor.js",
     "lint": "node node_modules/eslint/bin/eslint lib src scripts",
     "package": "bash ./package.sh",
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "if [ -f ./package-lock.json ]; then npx npm-force-resolutions; fi",
     "test": "mocha --exit test/lib",
     "version": "./setVersion.sh $npm_package_version && git add ."
   }
